# pr-grave

./: LICENSE  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/components/: CIBottlenecks.jsx  Dashboard.jsx  RepoInput.jsx  ReviewerHeatmap.jsx  ScanProgress.jsx  SummaryCards.jsx  WhatIfSimulator.jsx
server/: pyproject.toml
server/app/: config.py  main.py
server/app/lib/: ci_analyzer.py  cost_calc.py  pr_analyzer.py
server/app/routes/: analyze.py  github.py
server/pr_graveyard_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
